--- a/index.html
+++ b/index.html
@@ -5,13 +5,28 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login | Employee Attendance Pro</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../styles/login-register.css">
 </head>
 <body>
+  <div class="background-spheres">
+    <div class="sphere"></div>
+    <div class="sphere"></div>
+    <div class="sphere"></div>
+    <div class="sphere"></div>
+    <div class="sphere"></div>
+    <div class="sphere"></div>
+    <div class="sphere"></div>
+    <div class="sphere"></div>
+    <div class="sphere"></div>
+    <div class="sphere"></div>
+  </div>
+
   <div class="auth-container">
-    <!-- Login Form -->
     <div class="auth-box">
-      <h3>Login to Your Account</h3>
+      <h3 class="typing-animation">Login to Your Account</h3>
       <form id="loginForm">
         <div class="mb-3">
           <input type="email" class="form-control" id="loginEmail" placeholder="Enter Your Email" required>
@@ -19,10 +34,10 @@
         <div class="mb-3">
           <input type="password" class="form-control" id="loginPassword" placeholder="Enter Your Password" required>
         </div>
-        <button type="submit" class="btn btn-custom" >LOGIN</button>
+        <button type="submit" class="btn btn-custom">LOGIN</button>
         <div class="extra-links">
           Forgot password? <a href="#">Reset Password</a><br>
-          Don’t have an account? <a href="register.html">Sign Up Here</a>
+          Don’t have an account? <a href="./pages/register.html">Sign Up Here</a>
         </div>
       </form>
     </div>
@@ -32,7 +47,6 @@
     © 2025 Attendance Pro | <a href="#">Privacy Policy</a> | <a href="#">Terms of Service</a>
   </footer>
 
-  <!-- Toast Container -->
   <div id="toastContainer" class="toast-container position-fixed top-0 end-0 p-3"></div>
 
   <script src="../scripts/login-register.js"></script>
