--- a/pages/register.html
+++ b/pages/register.html
@@ -5,13 +5,28 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Register | Employee Attendance Pro</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../styles/login-register.css">
 </head>
 <body>
+  <div class="background-spheres">
+    <div class="sphere"></div>
+    <div class="sphere"></div>
+    <div class="sphere"></div>
+    <div class="sphere"></div>
+    <div class="sphere"></div>
+    <div class="sphere"></div>
+    <div class="sphere"></div>
+    <div class="sphere"></div>
+    <div class="sphere"></div>
+    <div class="sphere"></div>
+  </div>
+
   <div class="auth-container">
-    <!-- Register Form -->
     <div class="auth-box">
-      <h3>Create a New Account</h3>
+      <h3 class="typing-animation">Create a New Account</h3>
       <form id="registerForm">
         <div class="mb-3">
           <input type="email" class="form-control" id="regEmail" placeholder="Enter Your Email" required>
@@ -33,7 +48,7 @@
         </div>
         <button type="submit" class="btn btn-custom">CREATE ACCOUNT</button>
         <div class="extra-links">
-          Already have an account? <a href="login.html">Login</a>
+          Already have an account? <a href="../index.html">Login</a>
         </div>
       </form>
     </div>
@@ -43,7 +58,6 @@
     © 2025 Attendance Pro | <a href="#">Privacy Policy</a> | <a href="#">Terms of Service</a>
   </footer>
 
-  <!-- Toast Container -->
   <div id="toastContainer" class="toast-container position-fixed top-0 end-0 p-3"></div>
 
   <script src="../scripts/login-register.js"></script>
