feat:modified path user-management Page

--- a/pages/reports.html
+++ b/pages/reports.html
@@ -32,7 +32,7 @@
                 <li><a href="../Pages/home.html">Home</a></li>
                 <li><a href="../Pages/dashboard.html" class="active">Dashboard</a></li>
                 <li><a href="../Pages/reports.html">Reports</a></li>
-                <li><a href="../Pages/User Management.html">User Management</a></li>
+                <li><a href="../pages/user-managmet.html">User Management</a></li>
                 <li><a href="../Pages/login.html" class="logout">Logout</a></li>
             </ul>
         </div>
